# TRIDENT

./: .env.example  .gitignore  CURSOR_FILES.md  DETAILS.md  README.md  load_model.py  process_tma_masks.py  pyproject.toml  run_batch_of_hancock_slides.py  run_batch_of_hancock_tmas.py  run_batch_of_slides.py  run_single_slide.py
.claude/skills/trident/: SKILL.md  reference.md
.github/workflows/: ci.yml
.kilo/plans/: 1776224381639-mighty-canyon.md  1776465329810-quiet-canyon.md
docs/: api.rst  citation.rst  conf.py  detailed_README.md  faq.rst  index.rst  installation.rst  quickstart.rst  requirements.txt  tutorials.rst
files/: consolidate_features.py
tests/: README.md  _test_gating.py  conftest.py  test_converter.py  test_czi_huggingface_feature_extraction.py  test_czi_reader.py  test_dump_patches.py  test_empty_coords_pipeline.py  test_multi_gpu_equivalence_patch_encoders.py  test_multigpu.py  test_openslidewsi.py  test_otsu_segmenter.py  test_overlay.py  test_patch_encoder_resize.py  test_patch_encoders.py  test_patch_segmentation.py  test_patch_segmentation_cellvit.py  test_patch_segmentation_histoplus.py  test_patch_segmentation_pipeline.py  test_patcher.py  test_patcher_scan_order.py  test_processor.py  test_processor_czi_discovery.py  test_processor_lifecycle.py  test_processor_selected_wsi_paths.py  test_real_multi_gpu_equivalence.py  test_resnet50_local_ckpt.py  test_run_batch_of_slides.py  test_run_batch_of_slides_integration_outputs.py  test_run_single_slide.py  test_segmentation_models.py  test_slide_encoders.py  test_summary_md.py  test_vlm.py  test_vlm_patho_r1.py  test_vlm_pipeline.py  test_wsi_core_behaviors.py  test_wsi_states_v2.py  trident_skill_eval_tasks.md
tests/benchmarks/: __init__.py  test_patch_scan_order_benchmark.py
trident/: Concurrency.py  Converter.py  IO.py  Processor.py  README.md  State.py  Summary.py  Visualization.py  __init__.py  cli.py  cli_doctor.py
trident/patch_encoder_models/: __init__.py  base.py  load.py  local_ckpts.json  usermodels.py
trident/patch_encoder_models/model_zoo/ctranspath/: ctran.py
trident/patch_encoder_models/model_zoo/genbio_pathfm/: genbio_pathfm.py
trident/patch_encoder_models/utils/: constants.py  transform_utils.py
trident/patch_segmentation_models/: __init__.py  load.py
trident/segmentation_models/: __init__.py  load.py  local_ckpts.json  otsu.py
trident/segmentation_models/model_zoo/: __init__.py  otsu.py
trident/slide_encoder_models/: __init__.py  load.py  local_ckpts.json
trident/vlm_models/: __init__.py  load.py
trident/wsi_objects/: CZIWSI.py  CuCIMWSI.py  DICOMWSI.py  DICOMWebWSI.py  ImageWSI.py  OMEZarrWSI.py  OpenSlideWSI.py  SDPCWSI.py  WSI.py  WSIFactory.py  WSIPatcher.py
tutorials/: 1-Step-by-Step-Patch-Feature-Extraction-with-Trident.ipynb  3-Training-a-WSI-Classification-Model-with-ABMIL-and-Heatmaps.ipynb  Using-with-DICOM-Stores.md
