[tool.poetry]
name = "trident"
version = "0.2.3"
description = "A package for preprocessing whole-slide images."
authors = [
    "Guillaume Jaume <gjaume@bwh.harvard.edu>",
    "Andrew Zhang <andrewzh@mit.edu>",
    "Paul Doucet <homedoucetpaul@gmail.com>"
]
license = "CC BY-NC-ND 4.0"  
repository = "https://github.com/mahmoodlab/TRIDENT"

[tool.poetry.dependencies]
python = "^3.10"  # Specify the Python version compatibility.
ipywidgets = "*"
torch = "*"
tqdm = "*"
h5py = "*"
matplotlib = "*"
opencv-python = "*"
openslide-python = "*"
Pillow = "*"
geopandas = "*"
huggingface_hub = "*"
openslide-bin = "*"

# Optional dependencies
transformers = { version = "*", optional = true }
timm = { version = "0.9.16", optional = true }
einops_exts = { version = "*", optional = true }
scipy = { version = "*", optional = true }
segmentation-models-pytorch = { version = "*", optional = true }
safetensors = { version = "*", optional = true }
environs = { version = "11.0.0", optional = true }
sacremoses = { version = "0.1.1", optional = true }
fairscale = { version = "*", optional = true }
timm_ctp = { version = "*", optional = true }
conch = { git = "https://github.com/Mahmoodlab/CONCH.git", optional = true }
musk = { git = "https://github.com/lilab-stanford/MUSK", optional = true }
gigapath = { git = "https://github.com/prov-gigapath/prov-gigapath.git", optional = true }
madeleine = { git = "https://github.com/mahmoodlab/MADELEINE.git", optional = true }

[tool.poetry.extras]
base = [
    "transformers",
    "timm",
    "einops_exts",
    "scipy",
    "segmentation-models-pytorch",
    "safetensors",
]
patch-encoders = [
    "fairscale",
    "timm_ctp",
    "conch",
    "musk",
]
slide-encoders = [
    "environs",
    "sacremoses",
    "gigapath",
    "madeleine",
]
full = [
    "transformers",
    "timm",
    "einops_exts",
    "scipy",
    "segmentation-models-pytorch",
    "safetensors",
    "environs",
    "sacremoses",
    "fairscale",
    "timm_ctp",
    "conch",
    "musk",
    "gigapath",
    "madeleine",
]

[tool.poetry.dev-dependencies]
# Optional development dependencies 

[tool.poetry.scripts]
trident = "trident.cli:main"
run_batch_of_slides = "run_batch_of_slides:main"
run_single_slide = "run_single_slide:main"
trident-doctor = "trident.cli_doctor:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.package]
include = [
    { format = "file", path = "trident/slide_encoder_models/local_ckpts.json" },
    { format = "file", path = "trident/patch_encoder_models/local_ckpts.json" },
    { format = "file", path = "trident/segmentation_models/local_ckpts.json" },
]
include_package_data = true
