[tool.poetry]
name = "trident"
version = "0.2.4"
description = "A package for preprocessing whole-slide images."
authors = [
    "Guillaume Jaume <guillaume.jaume@unil.ch>",
    "Andrew Zhang <andrewzh@mit.edu>",
    "Paul Doucet <homedoucetpaul@gmail.com>"
]
license = "CC BY-NC-ND 4.0"  
repository = "https://github.com/mahmoodlab/TRIDENT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"  # Support Python 3.10 and 3.11.
ipywidgets = "*"
torch = "*"
torchvision = "*"
numpy = "*"
pandas = "*"
tqdm = "*"
h5py = "*"
matplotlib = "*"
opencv-python = "*"
scikit-image = ">=0.20"
openslide-python = "*"
Pillow = "*"
geopandas = "*"
shapely = "*"
requests = "*"
huggingface_hub = "*"
openslide-bin = "*"
aicsimageio = "*"
pyvips = "*"

# Core model dependencies (installed with `pip install -e .`)
transformers = ">=4.40,<5"
timm = "0.9.16"
einops = "*"
einops_exts = "*"
scipy = "*"
segmentation-models-pytorch = "*"
safetensors = "*"

# Optional dependencies
environs = { version = "11.0.0", optional = true }
sacremoses = { version = "0.1.1", optional = true }
fairscale = { version = "*", optional = true }
timm_ctp = { version = "*", optional = true }
conch = { git = "https://github.com/Mahmoodlab/CONCH.git", optional = true }
musk = { git = "https://github.com/lilab-stanford/MUSK", optional = true }
gigapath = { git = "https://github.com/prov-gigapath/prov-gigapath.git", optional = true }
madeleine = { git = "https://github.com/mahmoodlab/MADELEINE.git", optional = true }
pylibCZIrw = { version = "*", optional = true }
cf-units = { version = ">=3.1", optional = true }
ngff-zarr = { version = ">=0.12", optional = true }
zarr = { version = ">=3.0.0a0", optional = true }
dask = { version = ">=2024.10", optional = true }

[tool.poetry.extras]
patch-encoders = [
    "fairscale",
    "timm_ctp",
    "conch",
    "musk",
]
slide-encoders = [
    "environs",
    "sacremoses",
    "gigapath",
    "madeleine",
]
converter = [
    "pylibCZIrw",
]
convert = [
    "pylibCZIrw",
]
full = [
    "environs",
    "sacremoses",
    "fairscale",
    "timm_ctp",
    "conch",
    "musk",
    "gigapath",
    "madeleine",
    "pylibCZIrw",
]
omezarr = [
    "ngff-zarr",
    "dask",
    "cf-units",
    "zarr"
]

[tool.poetry.dev-dependencies]
# Optional development dependencies 

[tool.poetry.scripts]
trident = "trident.cli:main"
run_batch_of_slides = "run_batch_of_slides:main"
run_single_slide = "run_single_slide:main"
trident-doctor = "trident.cli_doctor:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.package]
include = [
    { format = "file", path = "trident/slide_encoder_models/local_ckpts.json" },
    { format = "file", path = "trident/patch_encoder_models/local_ckpts.json" },
    { format = "file", path = "trident/segmentation_models/local_ckpts.json" },
]
include_package_data = true
